Fri Feb 16 20:22:18 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/sstate.c: fixed incorrect format in debug statement for 'elapsed'
   and added 'maxage' too

Fri Feb 16 13:50:43 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - data/drivers.list: add ActivePower 400 and 2000 VA
 (from Tomasz Lewicki)
 
Fri Feb 16 13:06:56 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - libusb.c: fix type name bug introduced in memory leak fix.

Fri Feb 16 12:47:28 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - man/usbhid-ups.8: finally add the pollfreq documentation.
 
Thu Feb 15 21:46:04 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - developers.txt: some additional info on coding style.
	
Thu Feb 15 21:30:13 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - libusb.c: fixed small memory leak, reported by Jacob Schmier.

Mon Feb  5 05:30:24 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - libshut.c: fixed uninitialized variable
 - usbhid-ups.c: fixed a format string
 - automake: avoid per-target CFLAGS where possible, so that per-target
   object files will not be created from shared sources.
	
Mon Feb  5 01:45:35 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - hotplug/udev: added hotplugging rules for various USB devices

Thu Feb  1 20:41:20 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Changed email address in bcmxcp.c.

Tue Jan 30 16:00:54 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 - drivers/tripplite-hid.c: #include main.h to get prototype for getval

Tue Jan 30 15:55:44 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 - snmp-ups.[ch]: implement already documented snmp_version parameter

Mon Jan 29 17:28:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: trimming trailing '\n' from 'ans' in debug code had a bad
   side effect (clients wouldn't work anymore), fixing it
